# ghostpwn

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: ghost_tools.yaml  mock_recon.yaml  web_assessment.yaml
src/ghostpwn/: __init__.py  cli.py  errors.py  graph.py  loader.py  models.py  orchestrator.py  report.py  template.py
src/ghostpwn/adapters/: __init__.py  base.py  command.py  dns_recon.py  http_probe.py  mock.py  registry.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_command_adapter.py  test_graph.py  test_loader.py  test_orchestrator.py  test_report.py  test_template.py
