[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostpwn"
version = "0.1.0"
description = "Automated penetration-test orchestration engine for authorized engagements"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "joemunene-by" }]
keywords = ["pentest", "orchestration", "security", "workflow", "dag", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "dnspython>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/joemunene-by/ghostpwn"
Repository = "https://github.com/joemunene-by/ghostpwn"

[project.scripts]
ghostpwn = "ghostpwn.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostpwn"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4"]
# B008: Typer relies on calls (typer.Option/Argument) in argument defaults.
# UP042: str-mixin enums are intentional so .value serializes cleanly to JSON.
ignore = ["B008", "UP042"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
